# meshmash

./: 404.html  README.md  hks_feature.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/prompts/: plan-condensedHksPipelineCli.prompt.md
.github/workflows/: docs.yml  format.yml  publish.yml
cli/: index.html
docs/: cli.md  index.md  install.md  reference.md
docs/examples/: tutorial.py
examples/tutorial/: index.html
install/: index.html
reference/: index.html
search/: search_index.json
src/meshmash/: __init__.py  agglomerate.py  cave.py  datasets.py  decompose.py  graph.py  implicit_solver.py  io.py  label_propagation.py  laplacian.py  morphometry_pipeline.py  pipeline.py  split.py  types.py  utils.py  wrap.py
src/meshmash/cli/: README.md  __init__.py  datasets.py  hks.py
tests/: conftest.py  test_cli_hks.py  test_datasets.py  test_laplacian.py  test_pipeline.py  test_utils.py  test_wrap.py
