[project]
dependencies = [
    "fast-simplification>=0.1.7",
    "gpytoolbox>=0.3.3",
    "numpy>=1.26.0",
    "pandas>=2.2.3",
    "pyvista>=0.44.1",
    "robust-laplacian>=1.0.0",
    "scipy>=1.15.2",
    "tqdm-joblib>=0.0.4",
]
description = "Random mesh utilities."
name = "meshmash"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.1.0"


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
