[project]
dependencies = [
    "caveclient[cv]>=8.0.1",
    "fast-simplification>=0.1.7",
    "fastremap>=1.16.1",
    "gpytoolbox>=0.3.3",
    "meshio>=5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.3",
    "point-cloud-utils>=0.34.0",
    "pyvista>=0.44.1",
    "robust-laplacian>=1.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.15.0",
    "tqdm-joblib>=0.0.4",
    "typer>=0.12",
]
description = "Random mesh and related utilities in Python."
name = "meshmash"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.1.0"

[project.optional-dependencies]
datasets = ["pooch>=1.8"]

[dependency-groups]
dev = ["meshmash[datasets]", "pytest>=8.0"]

[project.scripts]
meshmash = "meshmash.cli:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
