[project]
dependencies = [
    "caveclient[cv]>=7.0.0,<8.0.0",
    "click==8.2.1",
    "fast-simplification>=0.1.7",
    "fastremap>=1.16.1",
    "gpytoolbox>=0.3.3",
    "meshio>=5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.3",
    "point-cloud-utils>=0.34.0",
    "pymeshlab==2023.12.post3",
    "pyvista>=0.44.1",
    "robust-laplacian>=1.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.0",
    "tqdm-joblib>=0.0.4",
    "typer>=0.12",
]
description = "Random mesh and related utilities in Python."
name = "meshmash"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.1.0"

[project.optional-dependencies]
datasets = ["pooch>=1.8"]

[dependency-groups]
dev = [
    { include-group = 'docs' },
    { include-group = 'lint' },
    { include-group = 'test' },
]
docs = [
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-git-authors-plugin",
    "mkdocs-git-committers-plugin-2",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-include-markdown-plugin",
    "mkdocs-jupyter",
    "mkdocs-macros-plugin",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-section-index",
    "mkdocs-typer>=0.0.3",
    "mkdocstrings[crystal,python]",
    "mknotebooks",
    "pymdown-extensions",
]
lint = ["ruff"]
test = ["meshmash[datasets]", "pytest>=8.0"]

[project.scripts]
meshmash = "meshmash.cli:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.poe.tasks]
checks = ['lint-check', 'test']
doc-build = "mkdocs build"
doc-serve = "mkdocs serve"
test = "uv run pytest tests"

[tool.poe.tasks.lint-check]
shell = "uv run ruff check . && uv run ruff format . --check"

[tool.poe.tasks.lint-fix]
shell = "uv run ruff check . --fix && uv run ruff format ."
